Fix export to png issue of word wrapping

--- a/src/HealthCheck/HealthCheck.css
+++ b/src/HealthCheck/HealthCheck.css
@@ -27,6 +27,7 @@ th {
     padding-left: 16px;
     padding-right: 16px;
     text-align: left;
+    white-space: nowrap;
 }
 
 .emoji {
